syntax = "proto3";

package camera;

service CameraService{
    rpc cameraTalk(stream CameraMessage) returns (stream CameraMessage) {}
    rpc productLowAlert(stream ProductWatch) returns (ProductAlert) {}
}

message CameraMessage{
    string id = 1;
    string status = 2;
    int32 location = 3;
    int32 detectedShoppers = 4;
}

message ProductWatch{
    string id = 1;
    int32 shelf = 2;
    int32 productCount = 3;
 }

message ProductAlert{
    string id = 1;
    int32 shelf = 2;
    int32 productCount = 3;
}